Fix portfolio project alignment

--- a/public/assets/me/css/portfolio.scss
+++ b/public/assets/me/css/portfolio.scss
@@ -6,7 +6,9 @@
     }
 
     .project-item {
-        margin: 10px;
+        margin: 10px 0;
+        padding: 10px;
+        -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
         overflow: auto;
         float: left;
         width: 25%;
